refactor: Menu 관련 도메인 JPA로 이전