@@ -1,13 +1,13 @@
 package kitchenpos.application;
 
-import static kitchenpos.domain.OrderStatus.COMPLETION;
 import static kitchenpos.domain.OrderStatus.COOKING;
 import static kitchenpos.domain.OrderStatus.MEAL;
 import static kitchenpos.fixtures.TestFixtures.메뉴_그룹_생성;
 import static kitchenpos.fixtures.TestFixtures.메뉴_생성;
 import static kitchenpos.fixtures.TestFixtures.주문_생성;
+import static kitchenpos.fixtures.TestFixtures.주문_생성_요청;
 import static kitchenpos.fixtures.TestFixtures.주문_테이블_생성;
-import static kitchenpos.fixtures.TestFixtures.주문_항목_생성;
+import static kitchenpos.fixtures.TestFixtures.주문_항목_요청;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertAll;
@@ -15,12 +15,16 @@ import static org.junit.jupiter.api.Assertions.assertAll;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import kitchenpos.domain.Menu;
 import kitchenpos.domain.MenuGroup;
 import kitchenpos.domain.Order;
-import kitchenpos.domain.OrderLineItem;
 import kitchenpos.domain.OrderTable;
+import kitchenpos.ui.dto.OrderCreateRequest;
+import kitchenpos.ui.dto.OrderLineItemRequest;
+import kitchenpos.ui.dto.OrderResponse;
+import kitchenpos.ui.dto.OrderStatusUpdateRequest;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -34,26 +38,26 @@ class OrderServiceTest {
         @Nested
         class 정상적인_주문이_입력되면 extends ServiceTest {
 
-            private final OrderLineItem orderLineItem = 주문_항목_생성(1L, 1L, 5);
             private final MenuGroup menuGroup = 메뉴_그룹_생성("한마리메뉴");
             private final Menu menu = 메뉴_생성("치킨", BigDecimal.valueOf(1_000L), 1L, new ArrayList<>());
             private final OrderTable orderTable = 주문_테이블_생성(null, 5, false);
-            private final Order order = 주문_생성(1L, MEAL.name(), LocalDateTime.now(), List.of(orderLineItem));
+            private final OrderLineItemRequest orderLineItemRequest = 주문_항목_요청(1L, 1L);
+            private final OrderCreateRequest request = 주문_생성_요청(1L, List.of(orderLineItemRequest));
 
             @BeforeEach
             void setUp() {
                 menuGroupRepository.save(menuGroup);
                 menuRepository.save(menu);
-                orderTableDao.save(orderTable);
+                orderTableRepository.save(orderTable);
             }
 
             @Test
             void 해당_주문을_반환한다() {
-                final Order actual = orderService.create(order);
+                final OrderResponse response = orderService.create(request);
 
                 assertAll(
-                        () -> assertThat(actual).isNotNull(),
-                        () -> assertThat(actual.getOrderStatus()).isEqualTo(COOKING.name())
+                        () -> assertThat(response).isNotNull(),
+                        () -> assertThat(response.getOrderStatus()).isEqualTo(COOKING.name())
                 );
             }
         }
@@ -61,11 +65,11 @@ class OrderServiceTest {
         @Nested
         class 빈_주문_항목으로_주문이_입력되면 extends ServiceTest {
 
-            private final Order order = 주문_생성(null, MEAL.name(), LocalDateTime.now(), null);
+            private final OrderCreateRequest request = 주문_생성_요청(null, Collections.emptyList());
 
             @Test
             void 예외가_발생한다() {
-                assertThatThrownBy(() -> orderService.create(order))
+                assertThatThrownBy(() -> orderService.create(request))
                         .isInstanceOf(IllegalArgumentException.class);
             }
         }
@@ -73,23 +77,24 @@ class OrderServiceTest {
         @Nested
         class 존재하지_않는_메뉴로_주문이_입력되면 extends ServiceTest {
 
-            private final OrderLineItem orderLineItem = 주문_항목_생성(1L, 1L, 5);
-            private final Order order = 주문_생성(null, MEAL.name(), LocalDateTime.now(), List.of(orderLineItem));
+            private final OrderLineItemRequest orderLineItemRequest = 주문_항목_요청(1L, 1L);
+            private final OrderCreateRequest request = 주문_생성_요청(null, List.of(orderLineItemRequest));
 
             @Test
             void 예외가_발생한다() {
-                assertThatThrownBy(() -> orderService.create(order))
+                assertThatThrownBy(() -> orderService.create(request))
                         .isInstanceOf(IllegalArgumentException.class);
             }
         }
 
         @Nested
-        class 주문_테이블없이_주문을_입력하면 extends ServiceTest {
+        class 없는_주문_테이블로_주문을_입력하면 extends ServiceTest {
 
-            private final OrderLineItem orderLineItem = 주문_항목_생성(1L, 1L, 5);
             private final MenuGroup menuGroup = 메뉴_그룹_생성("한마리메뉴");
             private final Menu menu = 메뉴_생성("치킨", BigDecimal.valueOf(1_000L), 1L, new ArrayList<>());
-            private final Order order = 주문_생성(null, MEAL.name(), LocalDateTime.now(), List.of(orderLineItem));
+            private final OrderLineItemRequest orderLineItemRequest = 주문_항목_요청(1L, 1L);
+            private final OrderCreateRequest request = 주문_생성_요청(0L, List.of(orderLineItemRequest));
+
 
             @BeforeEach
             void setUp() {
@@ -99,7 +104,7 @@ class OrderServiceTest {
 
             @Test
             void 예외가_발생한다() {
-                assertThatThrownBy(() -> orderService.create(order))
+                assertThatThrownBy(() -> orderService.create(request))
                         .isInstanceOf(IllegalArgumentException.class);
             }
         }
@@ -107,22 +112,22 @@ class OrderServiceTest {
         @Nested
         class 비어있는_주문_테이블로_주문을_입력하면 extends ServiceTest {
 
-            private final OrderLineItem orderLineItem = 주문_항목_생성(1L, 1L, 5);
             private final MenuGroup menuGroup = 메뉴_그룹_생성("한마리메뉴");
             private final Menu menu = 메뉴_생성("치킨", BigDecimal.valueOf(1_000L), 1L, new ArrayList<>());
             private final OrderTable orderTable = 주문_테이블_생성(null, 5, true);
-            private final Order order = 주문_생성(1L, MEAL.name(), LocalDateTime.now(), List.of(orderLineItem));
+            private final OrderLineItemRequest orderLineItemRequest = 주문_항목_요청(1L, 1L);
+            private final OrderCreateRequest request = 주문_생성_요청(1L, List.of(orderLineItemRequest));
 
             @BeforeEach
             void setUp() {
                 menuGroupRepository.save(menuGroup);
                 menuRepository.save(menu);
-                orderTableDao.save(orderTable);
+                orderTableRepository.save(orderTable);
             }
 
             @Test
             void 예외가_발생한다() {
-                assertThatThrownBy(() -> orderService.create(order))
+                assertThatThrownBy(() -> orderService.create(request))
                         .isInstanceOf(IllegalArgumentException.class);
             }
         }
@@ -136,7 +141,7 @@ class OrderServiceTest {
 
             @Test
             void 모든_주문을_반환한다() {
-                final List<Order> orders = orderService.list();
+                final List<OrderResponse> orders = orderService.list();
                 assertThat(orders).isEmpty();
             }
         }
@@ -149,22 +154,20 @@ class OrderServiceTest {
         class 주문_id와_주문이_입력되면 extends ServiceTest {
 
             private final OrderTable orderTable = 주문_테이블_생성(null, 5, true);
-            private final OrderLineItem orderLineItem = 주문_항목_생성(1L, 1L, 5);
-            private final Order order = 주문_생성(1L, MEAL.name(), LocalDateTime.now(), List.of(orderLineItem));
-            final Order orderToUpdateTo = 주문_생성(null, COMPLETION.name(), LocalDateTime.now(), null);
-            private Order savedOrder;
+            private final Order order = 주문_생성(orderTable, MEAL, LocalDateTime.now(), Collections.emptyList());
+            final OrderStatusUpdateRequest updateRequest = new OrderStatusUpdateRequest("COMPLETION");
 
             @BeforeEach
             void setUp() {
-                orderTableDao.save(orderTable);
-                savedOrder = orderDao.save(order);
+                orderTableRepository.save(orderTable);
+                orderRepository.save(order);
             }
 
             @Test
             void 주문상태를_변경하고_주문을_반환한다() {
-                final Order updatedOrder = orderService.changeOrderStatus(savedOrder.getId(), orderToUpdateTo);
+                final OrderResponse response = orderService.changeOrderStatus(1L, updateRequest);
 
-                assertThat(updatedOrder.getOrderStatus()).isEqualTo(orderToUpdateTo.getOrderStatus());
+                assertThat(response.getOrderStatus()).isEqualTo(updateRequest.getOrderStatus());
             }
         }
     }
